--- a/.gitignore
+++ b/.gitignore
@@ -435,3 +435,8 @@ tags
 
 # End of https://www.gitignore.io/api/c++,latex,cmake,python,jupyternotebook,qtcreator,vim
 *.pt
+
+
+# Personal Git Ignore Folders
+images/*
+model_states/*
